# best-friend

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
data/: .gitignore
data/renderpacks/Simple/: rendergraph.json  resources.json  shaderpack.json
data/renderpacks/Simple/materials/: BestFriendUI.pipeline  Train.mat  Train.pipeline
data/renderpacks/Simple/shaders/: gui.pixel.hlsl  gui.pixel.spirv  gui.vertex.hlsl  gui.vertex.spirv  train.pixel.spirv  train.vertex.hlsl  train.vertex.spirv
data/shaderpacks/Simple/: rendergraph.json  resources.json
data/shaderpacks/Simple/materials/: Train.mat  Train.pipeline  gui.mat  gui.pipeline
data/shaderpacks/Simple/shaders/: gui.pixel.hlsl  gui.vertex.hlsl  train.pixel.hlsl  train.vertex.hlsl  ui.vertex.hlsl
src/: main.cpp
src/ec/: component.cpp  component.hpp  entity.cpp  entity.hpp  system.hpp  transform.cpp  transform.hpp
src/input/: input.cpp  input.hpp
src/loading/: bve_wrapper.cpp  bve_wrapper.hpp  data_loader.cpp  data_loader.hpp  train_loading.cpp  train_loading.hpp
src/renderer/: camera_component.cpp  camera_component.hpp  nk_backend.cpp  nk_backend.hpp  train_rendering.cpp  train_rendering.hpp
src/ui/: panel.cpp  panel.hpp  panel_manager.hpp  train_selection_panel.cpp  train_selection_panel.hpp  ui_events.cpp  ui_events.hpp
src/util/: constants.hpp
src/world/: world.cpp  world.hpp
